# crash_mcp

./: README.md  install.sh  pyproject.toml  requirements.txt
src/crash_mcp/: config.py  crash_session.py  kernel_detection.py  server.py
src/crash_mcp.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
tests/crash/: simple_crash_server_test.py  test_crash_no_scroll.py  test_crash_prompt.py  test_crash_server.py
