[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "crash-mcp"
version = "0.1.0"
description = "MCP server for crash dump analysis"
authors = [{name = "User", email = "user@example.com"}]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "mcp>=1.0.0",
    "uvicorn>=0.24.0",
    "starlette>=0.27.0",
    "pydantic>=2.0.0",
    "python-dotenv>=1.0.0",
    "pexpect>=4.8.0",
    "psutil>=5.9.0",
    "python-dateutil>=2.8.0"
]

[project.scripts]
crash-mcp = "crash_mcp.server:main"
crash-mcp-http = "crash_mcp.server:main_http"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-dir]
"" = "src"
